--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,10 @@ button:disabled {
   opacity: 0.6;
   cursor: not-allowed;
 }
+
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
