--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,20 @@
   color-scheme: light;
 }
 
+html.dark {
+  color-scheme: dark;
+}
+
 body {
   font-family: theme('fontFamily.sans');
   min-height: 100vh;
+  background-color: theme('colors.slate.50');
+  color: theme('colors.slate.900');
+}
+
+html.dark body {
+  background-color: theme('colors.slate.950');
+  color: theme('colors.slate.100');
 }
 
 button:disabled {
